--- a/index.html
+++ b/index.html
@@ -60,6 +60,40 @@
         </ul>
       </div>
 
+      <h2 class="main-margin">RECENTLY PLAYED</h2>
+      <div class="container-flex">
+        <ul>
+          <li>
+            <div class="flex-item"></div>
+          </li>
+          <li>
+            <div class="flex-item"></div>
+          </li>
+          <li>
+            <div class="flex-item"></div>
+          </li>
+          <li>
+            <div class="flex-item"></div>
+          </li>
+          <li>
+            <div class="flex-item"></div>
+          </li>
+          <li>
+            <div class="flex-item"></div>
+          </li>
+        </ul>
+      </div>
+
+      <div class="container-flex">
+        <ul>
+          <li>
+            <div class="flex-item"></div>
+          </li>
+          <li>
+            <div class="flex-item"></div>
+          </li>
+        </ul>
+      </div>
       </main>
       <footer></footer>
     </div>
