--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         </ul>
       </div>
 
+      <h2 class="main-margin">Creato per Jhon Doe</h2>
       <div class="container-flex">
         <ul>
           <li>
@@ -91,6 +92,18 @@
           </li>
           <li>
             <div class="flex-item"></div>
+          </li>
+        </ul>
+      </div>
+
+      <h2 class="main-margin">Artisti piu popolari</h2>
+      <div class="container-flex">
+        <ul>
+          <li>
+            <div class="flex-item circle"></div>
+          </li>
+          <li>
+            <div class="flex-item circle"></div>
           </li>
         </ul>
       </div>
