footer con scroll a destra

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         </div>
         <!-- /Effettua upgrade -->
 
-
       </header>
 
       <main>
@@ -61,7 +60,7 @@
       </div>
 
       <h2 class="main-margin">RECENTLY PLAYED</h2>
-      <div class="container-flex">
+      <div class="container-flex main-margin">
         <ul>
           <li>
             <div class="flex-item"></div>
@@ -85,7 +84,7 @@
       </div>
 
       <h2 class="main-margin">Creato per Jhon Doe</h2>
-      <div class="container-flex">
+      <div class="container-flex main-margin">
         <ul>
           <li>
             <div class="flex-item"></div>
@@ -97,7 +96,7 @@
       </div>
 
       <h2 class="main-margin">Artisti piu popolari</h2>
-      <div class="container-flex">
+      <div class="container-flex main-margin">
         <ul>
           <li>
             <div class="flex-item circle"></div>
@@ -108,7 +107,12 @@
         </ul>
       </div>
       </main>
-      <footer></footer>
+
+      <footer>
+        <div class="footer-bar">
+
+        </div>
+      </footer>
     </div>
   </body>
 </html>
