--- a/index.html
+++ b/index.html
@@ -48,63 +48,65 @@
 
       <main>
 
-      <div class="section-list">
-        <ul>
-          <li>link</li>
-          <li>link</li>
-          <li>link</li>
-          <li>link</li>
-          <li>link</li>
-          <li>link</li>
-        </ul>
-      </div>
+      <div class="main-wrapper main-margin">
+        <div class="section-list">
+          <ul>
+            <li>link</li>
+            <li>link</li>
+            <li>link</li>
+            <li>link</li>
+            <li>link</li>
+            <li>link</li>
+          </ul>
+        </div>
 
-      <h2 class="main-margin">RECENTLY PLAYED</h2>
-      <div class="container-flex main-margin">
-        <ul>
-          <li>
-            <div class="flex-item"></div>
-          </li>
-          <li>
-            <div class="flex-item"></div>
-          </li>
-          <li>
-            <div class="flex-item"></div>
-          </li>
-          <li>
-            <div class="flex-item"></div>
-          </li>
-          <li>
-            <div class="flex-item"></div>
-          </li>
-          <li>
-            <div class="flex-item"></div>
-          </li>
-        </ul>
-      </div>
+        <h2>RECENTLY PLAYED</h2>
+        <div class="container-flex">
+          <ul>
+            <li>
+              <div class="flex-item"></div>
+            </li>
+            <li>
+              <div class="flex-item"></div>
+            </li>
+            <li>
+              <div class="flex-item"></div>
+            </li>
+            <li>
+              <div class="flex-item"></div>
+            </li>
+            <li>
+              <div class="flex-item"></div>
+            </li>
+            <li>
+              <div class="flex-item"></div>
+            </li>
+          </ul>
+        </div>
 
-      <h2 class="main-margin">Creato per Jhon Doe</h2>
-      <div class="container-flex main-margin">
-        <ul>
-          <li>
-            <div class="flex-item"></div>
-          </li>
-          <li>
-            <div class="flex-item"></div>
-          </li>
-        </ul>
-      </div>
+        <h2 >Creato per Jhon Doe</h2>
+        <div class="container-flex">
+          <ul>
+            <li>
+              <div class="flex-item"></div>
+            </li>
+            <li>
+              <div class="flex-item"></div>
+            </li>
+          </ul>
+        </div>
 
-      <h2 class="main-margin">Artisti piu popolari</h2>
-      <div class="container-flex main-margin">
-        <ul>
-          <li>
-            <div class="flex-item circle"></div>
-          </li>
-          <li>
-            <div class="flex-item circle"></div>
-          </li>
-        </ul>
+        <h2 >Artisti piu popolari</h2>
+        <div class="container-flex">
+          <ul>
+            <li>
+              <div class="flex-item circle"></div>
+            </li>
+            <li>
+              <div class="flex-item circle"></div>
+            </li>
+          </ul>
+        </div>
       </div>
       </main>
 
