--- a/index.html
+++ b/index.html
@@ -10,30 +10,38 @@
     <div class="page-wrapper">
       <header>
 
+
         <!-- barra laterale -->
-        <aside class="debug-aside">
+        <aside class="debug-aside aside-wrapper">
 
-          <h2>immagine spotify</h2>
-          <!-- <img src="" alt=""> -->
+            <div class="element">
+              <h2>immagine spotify</h2>
+              <!-- <img src="" alt=""> -->
+              <ul class="main-list">
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+              </ul>
 
-          <ul class="main-list">
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-          </ul>
+              <h5>PLAYLIST</h5>
+              <ul class="playlist-list">
+                   <li><a href="">link</a></li>
+                   <li><a href="">link</a></li>
+                   <li><a href="">link</a></li>
+                   <li><a href="">link</a></li>
+                   <li><a href="">link</a></li>
+                   <li><a href="">link</a></li>
+                   <li><a href="">link</a></li>
+                   <li><a href="">link</a></li>
+                 </ul>
+            </div>
 
-          <h5>PLAYLIST</h5>
-          <ul class="playlist-list">
-               <li><a href="">link</a></li>
-               <li><a href="">link</a></li>
-               <li><a href="">link</a></li>
-               <li><a href="">link</a></li>
-               <li><a href="">link</a></li>
-               <li><a href="">link</a></li>
-               <li><a href="">link</a></li>
-               <li><a href="">link</a></li>
-             </ul>
-        </aside
+              <div class="aside-footer">
+                  <small>installa app</small>
+                  <hr>
+                  jhon doe
+              </div>
+        </aside>
         <!-- /barra laterale -->
 
       </header>
