--- a/index.html
+++ b/index.html
@@ -9,38 +9,48 @@
   <body>
     <div class="page-wrapper">
       <header>
-
-
         <!-- barra laterale -->
-        <aside class="debug-aside aside-wrapper">
+        <aside>
 
-            <div class="element">
-              <h2>immagine spotify</h2>
-              <!-- <img src="" alt=""> -->
-              <ul class="main-list">
-                <li><a href="">link</a></li>
-                <li><a href="">link</a></li>
-                <li><a href="">link</a></li>
-              </ul>
-
-              <h5>PLAYLIST</h5>
-              <ul class="playlist-list">
-                   <li><a href="">link</a></li>
-                   <li><a href="">link</a></li>
-                   <li><a href="">link</a></li>
-                   <li><a href="">link</a></li>
-                   <li><a href="">link</a></li>
-                   <li><a href="">link</a></li>
-                   <li><a href="">link</a></li>
-                   <li><a href="">link</a></li>
-                 </ul>
-            </div>
-
-              <div class="aside-footer">
-                  <small>installa app</small>
-                  <hr>
-                  jhon doe
-              </div>
+          <!-- logo -->
+           <div class="logo">
+             <img class="logo-size" src="img/logo.svg" alt="">
+           </div>
+           <!-- /logo -->
+           <!-- main nav -->
+           <nav class="main-nav">
+             <ul>
+               <li> <img src="img/home.svg" alt=""> Home </li>
+               <li> <img src="img/search.svg" alt=""> Search </li>
+               <li> <img src="img/libreria.svg" alt=""> Libreria </li>
+             </ul>
+           </nav>
+           <!-- /main nav -->
+           <!-- seconday nav playlist -->
+           <nav class="secondary-nav">
+             <div class="playlist-title">
+               <h3>PLAYLIST</h3>
+               <a href="#">CREA PLAYLIST</a>
+             </div>
+             <ul class="playlist-list">
+               <li><a href="#">Crea playlist</a></li>
+               <li><a href="#">Crea playlist</a></li>
+               <li><a href="#">Crea playlist</a></li>
+               <li><a href="#">Crea playlist</a></li>
+               <li><a href="#">Crea playlist</a></li>
+               <li><a href="#">Crea playlist</a></li>
+               <li><a href="#">Crea playlist</a></li>
+               <li><a href="#">Crea playlist</a></li>
+             </ul>
+           </nav>
+           <!-- /seconday nav playlist -->
+           <!-- aside bottom -->
+           <div class="aside-bottom">
+             <a href="#">Install app</a>
+             <hr>
+             <h3>Jhon Doe</h3>
+           </div>
+           <!-- /aside bottom -->
         </aside>
         <!-- /barra laterale -->
 
