--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <title></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <title>Spotify</title>
   </head>
   <body>
     <div class="page-wrapper">
@@ -30,24 +31,29 @@
            <nav class="secondary-nav">
              <div class="playlist-title">
                <h3>PLAYLIST</h3>
-               <a href="#">CREA PLAYLIST</a>
+               <i class="fas fa-plus-square"></i>
+               <a href="#">Crea Playlist</a>
              </div>
              <ul class="playlist-list">
-               <li><a href="#">Crea playlist</a></li>
-               <li><a href="#">Crea playlist</a></li>
-               <li><a href="#">Crea playlist</a></li>
-               <li><a href="#">Crea playlist</a></li>
-               <li><a href="#">Crea playlist</a></li>
-               <li><a href="#">Crea playlist</a></li>
-               <li><a href="#">Crea playlist</a></li>
-               <li><a href="#">Crea playlist</a></li>
+               <li><a href="#">Nuova playlist</a></li>
+               <li><a href="#">Nuova playlist</a></li>
+               <li><a href="#">Nuova playlist</a></li>
+               <li><a href="#">Nuova playlist</a></li>
+               <li><a href="#">Nuova playlist</a></li>
+               <li><a href="#">Nuova playlist</a></li>
+               <li><a href="#">Nuova playlist</a></li>
+               <li><a href="#">Nuova playlist</a></li>
              </ul>
            </nav>
            <!-- /seconday nav playlist -->
            <!-- aside bottom -->
            <div class="aside-bottom">
+             <img src="img/download.svg" alt="">
              <a href="#">Install app</a>
              <hr>
+             <div class="circle">
+               <img src="img/profile.svg" alt="">
+             </div>
              <h3>Jhon Doe</h3>
            </div>
            <!-- /aside bottom -->
