--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
                <li> <img src="img/search.svg" alt=""> Search </li>
                <li> <img src="img/libreria.svg" alt=""> Libreria </li>
              </ul>
+
+             <ul class="hidden">
+               <li><i class="fab fa-spotify"></i></li>
+               <li> <img src="img/home.svg" alt=""> </li>
+               <li> <img src="img/search.svg" alt=""> </li>
+               <li> <img src="img/libreria.svg" alt=""> </li>
+             </ul>
            </nav>
            <!-- /main nav -->
            <!-- seconday nav playlist -->
@@ -55,6 +62,13 @@
                <img src="img/profile.svg" alt="">
              </div>
              <h3>Jhon Doe</h3>
+           </div>
+
+           <div class="aside-bottom hidden">
+             <img src="img/download.svg" alt="">
+             <div class="circle">
+               <img src="img/profile.svg" alt="">
+             </div>
            </div>
            <!-- /aside bottom -->
         </aside>
