--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 
         <div class="section-list">
           <ul>
-            <li>link</li>
-            <li>link</li>
-            <li>link</li>
-            <li>link</li>
-            <li>link</li>
-            <li>link</li>
+            <li> <a href="#">IN EVIDENZA</a><div class="selected"></div></li>
+            <li> <a href="#">PODCAST</a></li>
+            <li> <a href="#">CLASSIFICHE</a></li>
+            <li> <a href="#">GENERI E MOOD</a></li>
+            <li> <a href="#">NUOVE USCITE</a></li>
+            <li> <a href="#">SCOPRI</a></li>
           </ul>
         </div>
 
