--- a/index.html
+++ b/index.html
@@ -102,34 +102,100 @@
         <div class="container-flex">
           <ul>
             <li>
-              <div class="flex-item"></div>
+              <div class="flex-item">
+                <img src="img/metal_lifting.jpg" alt="">
+                <div class="overlay">
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+              <div class="flex-title">
+                <h5>Heavy Metal</h5>
+                <h6>Subtitle</h6>
+              </div>
             </li>
             <li>
-              <div class="flex-item"></div>
+            <li>
+              <div class="flex-item">
+                <img src="img/stranger.jpeg" alt="">
+                <div class="overlay">
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+              <div class="flex-title">
+                <h5>Stringer Things Vol.1(a Original Netflix Series)</h5>
+                <h6>Kyle Dixon & Michael Stain</h6>
+              </div>
             </li>
             <li>
-              <div class="flex-item"></div>
+              <div class="flex-item">
+                <img src="img/aquietplace.jpeg" alt="">
+                <div class="overlay">
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+              <div class="flex-title">
+                <h5>A Quiet Place</h5>
+                <h6>Subtitle</h6>
+              </div>
+              </li>
+            <li>
+              <div class="flex-item">
+                <img src="img/split.jpeg" alt="">
+                <div class="overlay">
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+              <div class="flex-title">
+                <h5>Split</h5>
+                <h6>Subtitle</h6>
+              </div>
             </li>
             <li>
-              <div class="flex-item"></div>
+              <div class="flex-item">
+                <img src="img/cure.jpeg" alt="">
+                <div class="overlay">
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+              <div class="flex-title">
+                <h5>A Cure For Wellness</h5>
+                <h6>Subtitle</h6>
+              </div>
             </li>
             <li>
-              <div class="flex-item"></div>
-            </li>
-            <li>
-              <div class="flex-item"></div>
+              <div class="flex-item">
+                <img src="img/sinister.jpeg" alt="">
+                <div class="overlay">
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+              <div class="flex-title">
+                <h5>Sinister</h5>
+                <h6>Subtitle</h6>
+              </div>
             </li>
           </ul>
         </div>
 
         <h2 >Creato per Jhon Doe</h2>
+        <p>Piu ascolti piu saranno accurati i suggerimenti</p>
         <div class="container-flex">
           <ul>
             <li>
-              <div class="flex-item"></div>
+              <div class="flex-item">
+                <img src="img/radar.jpeg" alt="">
+              </div>
+              <div class="flex-title">
+                <h5>Release Radar</h5>
+              </div>
             </li>
             <li>
-              <div class="flex-item"></div>
+              <div class="flex-item">
+                <img src="img/mixdaily.jpeg" alt="">
+              </div>
+              <div class="flex-title">
+                <h5>Daily Mix 1</h5>
+              </div>
             </li>
           </ul>
         </div>
@@ -138,10 +204,22 @@
         <div class="container-flex">
           <ul>
             <li>
-              <div class="flex-item circle"></div>
+              <div class="flex-item circle">
+                <img src="img/youg.jpeg" alt="">
+              </div>
+              <br>
+              <div class="flex-title">
+                <h5>Youg</h5>
+              </div>
             </li>
             <li>
-              <div class="flex-item circle"></div>
+              <div class="flex-item circle">
+                <img src="img/einaudi.jpeg" alt="">
+              </div>
+              <br>
+              <div class="flex-title">
+                <h5>Einaudi</h5>
+              </div>
             </li>
           </ul>
         </div>
