--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
             <li>
               <div class="flex-item">
                 <img src="img/radar.jpeg" alt="">
+                <div class="overlay">
+                  <i class="far fa-play-circle"></i>
+                </div>
               </div>
               <div class="flex-title">
                 <h5>Release Radar</h5>
@@ -192,6 +195,9 @@
             <li>
               <div class="flex-item">
                 <img src="img/mixdaily.jpeg" alt="">
+                <div class="overlay">
+                  <i class="far fa-play-circle"></i>
+                </div>
               </div>
               <div class="flex-title">
                 <h5>Daily Mix 1</h5>
@@ -206,6 +212,9 @@
             <li>
               <div class="flex-item circle">
                 <img src="img/youg.jpeg" alt="">
+                <div class="overlay circle">
+                  <i class="far fa-play-circle"></i>
+                </div>
               </div>
               <br>
               <div class="flex-title">
@@ -215,6 +224,9 @@
             <li>
               <div class="flex-item circle">
                 <img src="img/einaudi.jpeg" alt="">
+                <div class="overlay circle">
+                  <i class="far fa-play-circle"></i>
+                </div>
               </div>
               <br>
               <div class="flex-title">
