footer non responsive

--- a/index.html
+++ b/index.html
@@ -240,7 +240,44 @@
 
       <footer>
         <div class="footer-bar">
-
+          <div class="footer-item">
+            <img src="img/sinister.jpeg" alt="">
+            <div class="flex-title">
+              <h5>Sinister</h5>
+              <h6>Brano Nome</h6>
+            </div>
+            <i class="far fa-heart"></i>
+            <i class="far fa-folder"></i>
+          </div>
+            <div class="footer-item">
+              <i class="fas fa-random"></i>
+              <i class="fas fa-step-backward"></i>
+              <i class="far fa-play-circle"></i>
+              <i class="fas fa-step-forward"></i>
+              <i class="fas fa-redo"></i>
+            </div>
+            <div class="player">
+              <div class="footer-item">
+                <small>0:25</small>
+                <div class="line">
+                  <div class="marked-line">
+                    <div class="footer-overlay">
+                      <div class="footer-circle">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <small>4:35</small>
+              </div>
+            </div>
+          <div class="footer-item">
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-tv"></i>
+            <i class="fas fa-volume-up"></i>
+            <div class="volume">
+              <div class="selected-volume"></div>
+            </div>
+          </div>
         </div>
       </footer>
     </div>
