--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="js/javascript.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <title>Spotify</title>
   </head>
@@ -21,7 +22,8 @@
            <!-- main nav -->
            <nav class="main-nav">
              <ul>
-               <li> <img src="img/home.svg" alt=""> Home </li>
+               <li id="casa"> <img src="img/home.svg" alt=""> Home
+                 <script type="text/javascript" src="js/javascript.js"></script> </li>
                <li> <img src="img/search.svg" alt=""> Search </li>
                <li> <img src="img/libreria.svg" alt=""> Libreria </li>
              </ul>
